sfdx-source/main/default/objects/NTSP_Nurse_Note__c/NTSP_Nurse_Note__c.object-meta.xml
<CustomObject>
    <label>NTSP Nurse Note</label>
    <nameField>
        <displayFormat>NN-{0000}</displayFormat>
        <label>NTSP Nurse Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NTSP Nurse Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>