sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/BEFAST_Arm_Leg_Weakness__c.field-meta.xml
<CustomField>
    <fullName>BEFAST_Arm_Leg_Weakness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arm/Leg Weakness</label>
    <type>Checkbox</type>
</CustomField>