sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/BEFAST_Balance_Difficulty__c.field-meta.xml
<CustomField>
    <fullName>BEFAST_Balance_Difficulty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balance Difficulty</label>
    <type>Checkbox</type>
</CustomField>