sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/BEFAST_Difficulty_Comprehending_Words__c.field-meta.xml
<CustomField>
    <fullName>BEFAST_Difficulty_Comprehending_Words__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Difficulty Comprehending Words</label>
    <type>Checkbox</type>
</CustomField>