sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/BEFAST_Eyes_Vision_Changes__c.field-meta.xml
<CustomField>
    <fullName>BEFAST_Eyes_Vision_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eyes/Vision Changes</label>
    <type>Checkbox</type>
</CustomField>