sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/BEFAST_Left_Upper_Extremity_Weakness__c.field-meta.xml
<CustomField>
    <fullName>BEFAST_Left_Upper_Extremity_Weakness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Left Upper Extremity</label>
    <type>Checkbox</type>
</CustomField>