sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/BEFAST_Loss_of_Vision__c.field-meta.xml
<CustomField>
    <fullName>BEFAST_Loss_of_Vision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loss of Vision</label>
    <type>Checkbox</type>
</CustomField>