sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/BEFAST_Right_Lower_Extremity_Weakness__c.field-meta.xml
<CustomField>
    <fullName>BEFAST_Right_Lower_Extremity_Weakness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Right Lower Extremity</label>
    <type>Checkbox</type>
</CustomField>