sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/BEFAST_Right_Numbness__c.field-meta.xml
<CustomField>
    <fullName>BEFAST_Right_Numbness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Right Numbness</label>
    <type>Checkbox</type>
</CustomField>