sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/BEFAST_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>BEFAST_Symptoms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BEFAST Symptoms</label>
    <type>Checkbox</type>
</CustomField>