sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/Extension_of_Caller__c.field-meta.xml
<CustomField>
    <fullName>Extension_of_Caller__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Extension of Caller</label>
    <length>20</length>
    <type>Text</type>
</CustomField>