sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/Handoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Handoff Date</label>
    <type>Date</type>
</CustomField>