sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/LVO_Aphasia__c.field-meta.xml
<CustomField>
    <fullName>LVO_Aphasia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aphasia</label>
    <type>Checkbox</type>
</CustomField>