sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/LVO_Left_Lower_Extremity_Numbness__c.field-meta.xml
<CustomField>
    <fullName>LVO_Left_Lower_Extremity_Numbness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Left Lower Extremity</label>
    <type>Checkbox</type>
</CustomField>