sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/LVO_LKW__c.field-meta.xml
<CustomField>
    <fullName>LVO_LKW__c</fullName>
    <label>LVO LKW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within 23 Hours</fullName>
            </value>
            <value>
                <fullName>Greater than 23 Hours</fullName>
            </value>
            <value>
                <fullName>Wake Up Stroke</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>