sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/LVO_Right_Lower_Extremity_Numbness__c.field-meta.xml
<CustomField>
    <fullName>LVO_Right_Lower_Extremity_Numbness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Right Lower Extremity</label>
    <type>Checkbox</type>
</CustomField>