sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/LVO_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>LVO_Symptoms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LVO Symptoms</label>
    <type>Checkbox</type>
</CustomField>