sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/LVO_Vision_Loss__c.field-meta.xml
<CustomField>
    <fullName>LVO_Vision_Loss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vision Loss</label>
    <type>Checkbox</type>
</CustomField>