sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/NTSP_Case__c.field-meta.xml
<CustomField>
    <fullName>NTSP_Case__c</fullName>
    <label>NTSP Case</label>
    <referenceTo>NTSP_Case__c</referenceTo>
    <relationshipLabel>NTSP Nurse Notes</relationshipLabel>
    <relationshipName>NTSP_Nurse_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>