sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Description__c</fullName>
    <description>Used to gather additional information from user when &quot;Other&quot; radio option is selected from Position of Caller field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>