sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/Position_of_Caller__c.field-meta.xml
<CustomField>
    <fullName>Position_of_Caller__c</fullName>
    <label>Position of Caller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>