sfdx-source/main/default/objects/NTSP_Nurse_Note__c/fields/Site_Requesting_Consultation__c.field-meta.xml
<CustomField>
    <fullName>Site_Requesting_Consultation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Requesting Consultation</label>
    <type>Checkbox</type>
</CustomField>